Fix for bug 318877 . NSPR initialization crashes if OS_TARGET is WINNT on AMD64. Fix casts to work with updated Windows SDK headers. r=wtchang